<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layoutDirection="ltr"
    android:textDirection="ltr"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingVertical="7dp"
    android:layout_marginBottom="8dp"
    android:background="@color/darker_color"
    tools:viewBindingIgnore="true">


    <com.google.android.gms.ads.AdView
        android:id="@+id/mainAdView1"
        ads:adSize="MEDIUM_RECTANGLE"
        ads:adUnitId="@string/banner_ad_id1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/mainAdView2"
        ads:adSize="MEDIUM_RECTANGLE"
        ads:adUnitId="@string/banner_ad_id2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainAdView1"
        app:layout_constraintVertical_bias="0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/darker_color"
        android:visibility="gone" />


    <com.google.android.gms.ads.AdView
        android:id="@+id/mainAdView3"
        ads:adSize="MEDIUM_RECTANGLE"
        ads:adUnitId="@string/banner_ad_id3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainAdView2"
        app:layout_constraintVertical_bias="0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/darker_color"
        android:visibility="gone" />


    <com.google.android.gms.ads.AdView
        android:id="@+id/mainAdView4"
        ads:adSize="MEDIUM_RECTANGLE"
        ads:adUnitId="@string/banner_ad_id4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainAdView3"
        app:layout_constraintVertical_bias="0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/darker_color"
        android:visibility="gone" />


    <com.google.android.gms.ads.AdView
        android:id="@+id/mainAdView5"
        ads:adSize="MEDIUM_RECTANGLE"
        ads:adUnitId="@string/banner_ad_id5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainAdView4"
        app:layout_constraintVertical_bias="0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/darker_color"
        android:visibility="gone" />


</androidx.constraintlayout.widget.ConstraintLayout>