<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layoutDirection="ltr"
    android:textDirection="ltr"
    android:background="@color/darker_color"
    tools:viewBindingIgnore="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/custom_tool_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="9dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0"
        android:gravity="center"
        android:paddingVertical="13dp"
        android:background="@color/darker_color">



        <TextView
            android:id="@+id/title1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/favorite_back"
            app:layout_constraintBottom_toBottomOf="@id/favorite_back"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@color/yellow_color"
            android:text="@string/favorites"
            android:fontFamily="monospace"

            />

        <ImageView
            android:id="@+id/favorite_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:clickable="true"
            android:focusable="true"
            android:padding="3dp"
            android:background="?android:attr/selectableItemBackground"
            app:layout_constraintVertical_bias="0.03"
            app:layout_constraintHorizontal_bias="0.037"
            android:src="@drawable/c_favorite_back_buttond"
            android:contentDescription="@string/content_description_back" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/favoritesRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/custom_tool_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintWidth_percent="0.925"
        android:visibility="invisible"
        />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/no_favorites"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/favoritesRecyclerView"
        app:layout_constraintBottom_toBottomOf="@id/favoritesRecyclerView"
        app:layout_constraintWidth_percent="0.95"
        app:layout_constraintVertical_bias="0.1"
        android:visibility="gone">
        <ImageView
            android:id="@+id/image2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintWidth_percent="0.85"
            android:src="@drawable/c_favorites_no_favorites"
            app:layout_constraintVertical_bias="0"
            android:contentDescription="@string/content_description_no_internet"
            />
        <TextView
            android:id="@+id/no_favorites_to_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image2"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textStyle="bold"
            android:textSize="17sp"
            android:shadowRadius="5"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowColor="@color/gray_color"
            android:textColor="@color/white_color"
            android:text="@string/no_favorites"
            android:layout_marginTop="9dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>